# tiny-httpd

./: .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml  container.yml
docs/: adr-001-tiny-static-http-server.md  adr-002-idle-connection-timeout-via-activity-io.md  contributing.md  operations.md  rfc-tiny-static-http-server.md
src/: config.rs  default_index.html  fs.rs  lib.rs  metrics.rs  telemetry.rs
src/handler/: default_page.rs  mod.rs  response.rs  routing.rs  state.rs
src/server/: accept.rs  activity_io.rs  mod.rs  signal.rs
tests/: content_serving.rs  default_page.rs  fs_safety.rs  graceful_shutdown.rs  headers.rs  http_methods.rs  path_resolution.rs  probes.rs  shutdown_channel_close.rs  shutdown_signal_failure.rs  startup.rs
tests/common/: mod.rs  raw.rs
