[package]
name = "tiny-httpd"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Minimal static-file HTTP server for containers and Kubernetes"
license = "GPL-3.0-or-later"
repository = "https://github.com/mattwend/tiny-httpd"
readme = "README.md"
keywords = ["http", "static", "server", "kubernetes"]
categories = ["web-programming::http-server", "command-line-utilities"]

[dependencies]
bytes = "1.8.0"
clap = { version = "4.5.39", features = ["derive", "env"] }
futures-util = "0.3.31"
humantime = "2.3"
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["server", "server-auto", "server-graceful", "http1", "tokio", "service"] }
mime_guess = "2.0.5"
opentelemetry = "0.31.0"
telemetry-setup = { git = "https://github.com/mattwend/telemetry-setup", tag = "v0.1.0", features = ["otlp", "tokio-metrics"] }
thiserror = "2.0.12"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal", "net", "fs", "io-util", "time"] }
tokio-util = { version = "0.7.15", features = ["io"] }
tracing = "0.1.41"

[dev-dependencies]
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1", "tokio"] }
tempfile = "3.14.0"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "registry"] }
